File i/o overhaul