@@ -37,6 +37,7 @@ import java.awt.Font;
 import java.awt.Graphics2D;
 import java.awt.image.BufferedImage;
 import java.io.BufferedInputStream;
+import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URL;
@@ -78,8 +79,8 @@ public class Editor extends Screen {
 
   private final MapComponent mapComponent;
   private ResourceBundle gameFile = new ResourceBundle();
-  private String projectPath;
-  private String currentResourceFile;
+  private Path projectPath;
+  private Path currentResourceFile;
 
   private long statusTick;
   private String currentStatus;
@@ -111,14 +112,12 @@ public class Editor extends Screen {
     return preferences;
   }
 
-  @Override
-  public void prepare() {
+  @Override public void prepare() {
     this.getComponents().add(this.mapComponent);
     super.prepare();
   }
 
-  @Override
-  public void render(final Graphics2D g) {
+  @Override public void render(final Graphics2D g) {
 
     if (Game.world().environment() != null) {
       Game.world().environment().render(g);
@@ -130,25 +129,12 @@ public class Editor extends Screen {
     }
 
     if (this.currentResourceFile != null) {
-      Game.window()
-        .setTitle(
-          Game.info().getName()
-            + " "
-            + Game.info().getVersion()
-            + " - "
-            + this.currentResourceFile);
+      Game.window().setTitle(Game.info().getName() + " " + Game.info().getVersion() + " - " + this.currentResourceFile);
 
-      String mapName =
-        Game.world().environment() != null && Game.world().environment().getMap() != null
-          ? "\nMap: " + Game.world().environment().getMap().getName()
-          : "";
-      Tray.setToolTip(
-        Game.info().getName()
-          + " "
-          + Game.info().getVersion()
-          + "\n"
-          + this.currentResourceFile
-          + mapName);
+      String mapName = Game.world().environment() != null && Game.world().environment().getMap() != null
+        ? "\nMap: " + Game.world().environment().getMap().getName()
+        : "";
+      Tray.setToolTip(Game.info().getName() + " " + Game.info().getVersion() + "\n" + this.currentResourceFile + mapName);
     } else if (this.getProjectPath() != null) {
       Game.window().setTitle(Game.info().getTitle() + " - " + NEW_GAME_STRING);
       Tray.setToolTip(Game.info().getTitle() + "\n" + NEW_GAME_STRING);
@@ -161,12 +147,7 @@ public class Editor extends Screen {
     // render fps
     g.setFont(Style.getDefaultFont());
     g.setColor(Color.WHITE);
-    TextRenderer.render(
-      g,
-      Game.metrics().getFramesPerSecond() + " FPS",
-      10,
-      Game.window().getResolution().getHeight() - 20,
-      true);
+    TextRenderer.render(g, Game.metrics().getFramesPerSecond() + " FPS", 10, Game.window().getResolution().getHeight() - 20, true);
 
     if (Game.time().now() % 4 == 0) {
       SwingUtilities.invokeLater(StatusBar::update);
@@ -184,18 +165,12 @@ public class Editor extends Screen {
       if (deltaTime > fadeOutTime) {
         double fade = deltaTime - fadeOutTime;
         int alpha = (int) (255 - (fade / (STATUS_DURATION - fadeOutTime)) * 255);
-        g.setColor(
-          new Color(
-            Style.COLOR_STATUS.getRed(),
-            Style.COLOR_STATUS.getGreen(),
-            Style.COLOR_STATUS.getBlue(),
-            Math.clamp(alpha, 0, 255)));
+        g.setColor(new Color(Style.COLOR_STATUS.getRed(), Style.COLOR_STATUS.getGreen(), Style.COLOR_STATUS.getBlue(), Math.clamp(alpha, 0, 255)));
       }
 
       Font old = g.getFont();
       g.setFont(g.getFont().deriveFont(20.0f * Editor.preferences().getUiScale()));
-      TextRenderer.render(
-        g, this.currentStatus, 10, Game.window().getResolution().getHeight() - 60, true);
+      TextRenderer.render(g, this.currentStatus, 10, Game.window().getResolution().getHeight() - 60, true);
       g.setFont(old);
     }
   }
@@ -204,11 +179,11 @@ public class Editor extends Screen {
     return this.gameFile;
   }
 
-  public String getProjectPath() {
+  public Path getProjectPath() {
     return projectPath;
   }
 
-  public void setProjectPath(String projectPath) {
+  public void setProjectPath(Path projectPath) {
     this.projectPath = projectPath;
   }
 
@@ -227,10 +202,10 @@ public class Editor extends Screen {
       }
 
       // set up project settings
-      this.setProjectPath(chooser.getSelectedFile().getCanonicalPath());
+      this.setProjectPath(chooser.getSelectedFile().toPath());
 
       // load all maps in the directory
-      this.mapComponent.loadMaps(this.getProjectPath());
+      this.mapComponent.loadMaps(getProjectPath());
       this.currentResourceFile = null;
       this.gameFile = new ResourceBundle();
 
@@ -249,7 +224,7 @@ public class Editor extends Screen {
 
       // display first available map after loading all stuff
       if (!this.mapComponent.getMaps().isEmpty()) {
-        this.mapComponent.loadEnvironment(this.mapComponent.getMaps().get(0));
+        this.mapComponent.loadEnvironment(this.mapComponent.getMaps().getFirst());
       }
 
       this.gamefileLoaded();
@@ -262,8 +237,8 @@ public class Editor extends Screen {
   }
 
   public void load() {
-    if (EditorFileChooser.showFileDialog(
-      ResourceBundle.FILE_EXTENSION, GAME_FILE_NAME, false, ResourceBundle.FILE_EXTENSION) == JFileChooser.APPROVE_OPTION) {
+    if (EditorFileChooser.showFileDialog(ResourceBundle.FILE_EXTENSION, GAME_FILE_NAME, false, ResourceBundle.FILE_EXTENSION)
+      == JFileChooser.APPROVE_OPTION) {
       this.load(EditorFileChooser.instance().getSelectedFile().toPath(), false);
     }
   }
@@ -303,10 +278,7 @@ public class Editor extends Screen {
     }
 
     if (!FileUtilities.getExtension(gameFile).equals(ResourceBundle.FILE_EXTENSION)) {
-      log.log(
-        Level.SEVERE,
-        "[{0}] unsupported file format [{1}]",
-        new Object[] {gameFile, FileUtilities.getExtension(gameFile)});
+      log.log(Level.SEVERE, "[{0}] unsupported file format [{1}]", new Object[] {gameFile, FileUtilities.getExtension(gameFile)});
       return;
     }
 
@@ -320,13 +292,13 @@ public class Editor extends Screen {
       UndoManager.clearAll();
 
       // set up project settings
-      this.currentResourceFile = gameFile.toString();
+      this.currentResourceFile = gameFile;
       this.gameFile = ResourceBundle.load(gameFile.toString());
       if (this.gameFile == null) {
         throw new IllegalArgumentException("The game file " + gameFile + " could not be loaded!");
       }
 
-      this.setProjectPath(gameFile.toString());
+      this.setProjectPath(gameFile);
 
       // load maps from game file
       this.mapComponent.loadMaps(this.getGameFile().getMaps(), true);
@@ -341,30 +313,12 @@ public class Editor extends Screen {
 
       this.getGameFile().getSounds().parallelStream().forEach(Resources.sounds()::load);
 
-      log.log(
-        Level.INFO,
-        "{0} maps loaded from {1}",
-        new Object[] {this.getGameFile().getMaps().size(), this.currentResourceFile});
-      log.log(
-        Level.INFO,
-        "{0} spritesheets loaded from {1}",
-        new Object[] {this.getGameFile().getSpriteSheets().size(), this.currentResourceFile});
-      log.log(
-        Level.INFO,
-        "{0} tilesets loaded from {1}",
-        new Object[] {this.getGameFile().getTilesets().size(), this.currentResourceFile});
-      log.log(
-        Level.INFO,
-        "{0} emitters loaded from {1}",
-        new Object[] {this.getGameFile().getEmitters().size(), this.currentResourceFile});
-      log.log(
-        Level.INFO,
-        "{0} blueprints loaded from {1}",
-        new Object[] {this.getGameFile().getBluePrints().size(), this.currentResourceFile});
-      log.log(
-        Level.INFO,
-        "{0} sounds loaded from {1}",
-        new Object[] {this.getGameFile().getSounds().size(), this.currentResourceFile});
+      log.log(Level.INFO, "{0} maps loaded from {1}", new Object[] {this.getGameFile().getMaps().size(), this.currentResourceFile});
+      log.log(Level.INFO, "{0} spritesheets loaded from {1}", new Object[] {this.getGameFile().getSpriteSheets().size(), this.currentResourceFile});
+      log.log(Level.INFO, "{0} tilesets loaded from {1}", new Object[] {this.getGameFile().getTilesets().size(), this.currentResourceFile});
+      log.log(Level.INFO, "{0} emitters loaded from {1}", new Object[] {this.getGameFile().getEmitters().size(), this.currentResourceFile});
+      log.log(Level.INFO, "{0} blueprints loaded from {1}", new Object[] {this.getGameFile().getBluePrints().size(), this.currentResourceFile});
+      log.log(Level.INFO, "{0} sounds loaded from {1}", new Object[] {this.getGameFile().getSounds().size(), this.currentResourceFile});
 
       for (TmxMap map : this.mapComponent.getMaps()) {
         this.loadSpriteSheets(map);
@@ -377,7 +331,7 @@ public class Editor extends Screen {
       // display first available map after loading all stuff
       // also switch to map component
       if (!this.mapComponent.getMaps().isEmpty()) {
-        this.mapComponent.loadEnvironment(this.mapComponent.getMaps().get(0));
+        this.mapComponent.loadEnvironment(this.mapComponent.getMaps().getFirst());
       } else {
         Game.world().unloadEnvironment();
       }
@@ -386,10 +340,7 @@ public class Editor extends Screen {
       this.setCurrentStatus(Resources.strings().get("status_gamefile_loaded"));
     } finally {
       Game.window().cursor().set(Cursors.DEFAULT, 0, 0);
-      log.log(
-        Level.INFO,
-        "Loading gamefile {0} took: {1} ms",
-        new Object[] {gameFile, (System.nanoTime() - currentTime) / 1000000.0});
+      log.log(Level.INFO, "Loading gamefile {0} took: {1} ms", new Object[] {gameFile, (System.nanoTime() - currentTime) / 1000000.0});
       this.loading = false;
     }
   }
@@ -400,10 +351,7 @@ public class Editor extends Screen {
 
   public void importSpriteFile() {
 
-    if (EditorFileChooser.showFileDialog(
-      SPRITE_FILE_NAME,
-      Resources.strings().get(IMPORT_DIALOGUE, SPRITE_FILE_NAME),
-      false,
+    if (EditorFileChooser.showFileDialog(SPRITE_FILE_NAME, Resources.strings().get(IMPORT_DIALOGUE, SPRITE_FILE_NAME), false,
       SpritesheetResource.PLAIN_TEXT_FILE_EXTENSION) == JFileChooser.APPROVE_OPTION) {
       File spriteFile = EditorFileChooser.instance().getSelectedFile();
       if (spriteFile == null) {
@@ -424,20 +372,14 @@ public class Editor extends Screen {
   }
 
   public void importSpriteSheets() {
-    if (EditorFileChooser.showFileDialog(
-      SPRITESHEET_FILE_NAME,
-      Resources.strings().get(IMPORT_DIALOGUE, SPRITESHEET_FILE_NAME),
-      true,
+    if (EditorFileChooser.showFileDialog(SPRITESHEET_FILE_NAME, Resources.strings().get(IMPORT_DIALOGUE, SPRITESHEET_FILE_NAME), true,
       ImageFormat.getAllExtensions()) == JFileChooser.APPROVE_OPTION) {
       this.importSpriteSheets(Stream.of(EditorFileChooser.instance().getSelectedFiles()).map(File::toPath).toArray(Path[]::new));
     }
   }
 
   public void importSounds() {
-    if (EditorFileChooser.showFileDialog(
-      AUDIO_FILE_NAME,
-      Resources.strings().get(IMPORT_DIALOGUE, AUDIO_FILE_NAME),
-      true,
+    if (EditorFileChooser.showFileDialog(AUDIO_FILE_NAME, Resources.strings().get(IMPORT_DIALOGUE, AUDIO_FILE_NAME), true,
       SoundFormat.getAllExtensions()) == JFileChooser.APPROVE_OPTION) {
       this.importSounds(Stream.of(EditorFileChooser.instance().getSelectedFiles()).map(File::toPath).toArray(Path[]::new));
     }
@@ -448,46 +390,31 @@ public class Editor extends Screen {
       return;
     }
 
-    final String source = this.getProjectPath();
-    JFileChooser chooser = null;
-    int result = -1;
-    try {
-      chooser = new JFileChooser(source != null ? source : new File(".").getCanonicalPath());
-      chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
-      chooser.setDialogType(JFileChooser.SAVE_DIALOG);
-      FileFilter filter = new FileNameExtensionFilter(SPRITE_FILE_NAME, "info");
-      chooser.setFileFilter(filter);
-      chooser.addChoosableFileFilter(filter);
-      chooser.setSelectedFile(new File("sprites.info"));
+    final Path source = getProjectPath();
+    JFileChooser chooser = new JFileChooser(source.toFile());
+    chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
+    chooser.setDialogType(JFileChooser.SAVE_DIALOG);
+    FileFilter filter = new FileNameExtensionFilter(SPRITE_FILE_NAME, "info");
+    chooser.setFileFilter(filter);
+    chooser.addChoosableFileFilter(filter);
+    chooser.setSelectedFile(new File("sprites.info"));
 
-      result = chooser.showSaveDialog(Game.window().getHostControl());
+    int result = chooser.showSaveDialog(Game.window().getHostControl());
 
-    } catch (IOException e1) {
-      log.log(Level.SEVERE, e1.getLocalizedMessage(), e1);
-    }
-
-    if (chooser == null || result != JFileChooser.APPROVE_OPTION) {
+    if (result != JFileChooser.APPROVE_OPTION) {
       return;
     }
 
-    int res = JOptionPane.showConfirmDialog(
-      Game.window().getRenderComponent(),
-      Resources.strings().get("menu_export_spriteSheets_withResources"),
-      Resources.strings().get("menu_export_spriteSheets_withResources"),
-      JOptionPane.YES_NO_OPTION,
-      JOptionPane.QUESTION_MESSAGE);
+    int res = JOptionPane.showConfirmDialog(Game.window().getRenderComponent(), Resources.strings().get("menu_export_spriteSheets_withResources"),
+      Resources.strings().get("menu_export_spriteSheets_withResources"), JOptionPane.YES_NO_OPTION, JOptionPane.QUESTION_MESSAGE);
 
     Resources.spritesheets().saveTo(chooser.getSelectedFile().getAbsolutePath(), res == JOptionPane.NO_OPTION);
   }
 
   public void importTextureAtlas() {
-    if (EditorFileChooser.showFileDialog(
-      TEXTUREATLAS_FILE_NAME,
-      Resources.strings().get(IMPORT_DIALOGUE, TEXTUREATLAS_FILE_NAME),
-      false,
-      "xml") == JFileChooser.APPROVE_OPTION) {
-      TextureAtlas atlas =
-        TextureAtlas.read(EditorFileChooser.instance().getSelectedFile().getAbsolutePath());
+    if (EditorFileChooser.showFileDialog(TEXTUREATLAS_FILE_NAME, Resources.strings().get(IMPORT_DIALOGUE, TEXTUREATLAS_FILE_NAME), false, "xml")
+      == JFileChooser.APPROVE_OPTION) {
+      TextureAtlas atlas = TextureAtlas.read(EditorFileChooser.instance().getSelectedFile().getAbsolutePath());
       if (atlas == null) {
         return;
       }
@@ -506,9 +433,7 @@ public class Editor extends Screen {
     for (Path file : selectedFiles) {
       try (InputStream stream = Files.newInputStream(file)) {
         SoundFormat format = SoundFormat.get(FileUtilities.getExtension(file));
-        SoundResource resource =
-          new SoundResource(
-            new BufferedInputStream(stream), FileUtilities.getFileName(file.getFileName().toString()), format);
+        SoundResource resource = new SoundResource(new BufferedInputStream(stream), FileUtilities.getFileName(file.getFileName().toString()), format);
         this.getGameFile().getSounds().removeIf(x -> x.getName().equals(resource.getName()));
         this.getGameFile().getSounds().add(resource);
         Resources.sounds().load(resource);
@@ -527,13 +452,8 @@ public class Editor extends Screen {
   }
 
   private void processSpritesheets(SpritesheetImportPanel spritePanel) {
-    int option =
-      JOptionPane.showConfirmDialog(
-        Game.window().getRenderComponent(),
-        spritePanel,
-        Resources.strings().get("menu_assets_editSprite"),
-        JOptionPane.OK_CANCEL_OPTION,
-        JOptionPane.PLAIN_MESSAGE);
+    int option = JOptionPane.showConfirmDialog(Game.window().getRenderComponent(), spritePanel, Resources.strings().get("menu_assets_editSprite"),
+      JOptionPane.OK_CANCEL_OPTION, JOptionPane.PLAIN_MESSAGE);
     if (option != JOptionPane.OK_OPTION) {
       return;
     }
@@ -542,9 +462,7 @@ public class Editor extends Screen {
     // update the image
     Collection<SpritesheetResource> sprites = spritePanel.getSpriteSheets();
     for (SpritesheetResource info : sprites) {
-      Resources.spritesheets()
-        .getAll()
-        .removeIf(x -> x.getName().equals(info.getName() + "-preview"));
+      Resources.spritesheets().getAll().removeIf(x -> x.getName().equals(info.getName() + "-preview"));
       this.getGameFile().getSpriteSheets().removeIf(x -> x.getName().equals(info.getName()));
       this.getGameFile().getSpriteSheets().add(info);
       log.log(Level.INFO, "imported spritesheet {0}", new Object[] {info.getName()});
@@ -554,97 +472,80 @@ public class Editor extends Screen {
   }
 
   public void importEmitters() {
-    XmlImportDialog.importXml(
-      "Emitter",
-      file -> {
-        EmitterData emitter;
-        try {
-          emitter = XmlUtilities.read(EmitterData.class, file.toUri().toURL());
-        } catch (IOException | JAXBException e) {
-          log.log(Level.SEVERE, String.format("could not load emitter data from %s", file), e);
+    XmlImportDialog.importXml("Emitter", file -> {
+      EmitterData emitter;
+      try {
+        emitter = XmlUtilities.read(EmitterData.class, file.toUri().toURL());
+      } catch (IOException | JAXBException e) {
+        log.log(Level.SEVERE, String.format("could not load emitter data from %s", file), e);
+        return;
+      }
+
+      if (this.gameFile.getEmitters().stream().anyMatch(x -> x.getName().equals(Objects.requireNonNull(emitter).getName()))) {
+        if (!ConfirmDialog.show(Resources.strings().get("import_emitter_title"),
+          Resources.strings().get("import_emitter_question", emitter.getName()))) {
           return;
         }
 
-        if (this.gameFile.getEmitters().stream()
-          .anyMatch(x -> x.getName().equals(Objects.requireNonNull(emitter).getName()))) {
-          if (!ConfirmDialog.show(
-            Resources.strings().get("import_emitter_title"),
-            Resources.strings().get("import_emitter_question", emitter.getName()))) {
-            return;
-          }
+        this.gameFile.getEmitters().removeIf(x -> x.getName().equals(emitter.getName()));
+      }
 
-          this.gameFile.getEmitters().removeIf(x -> x.getName().equals(emitter.getName()));
-        }
-
-        this.gameFile.getEmitters().add(emitter);
-        UI.getAssetController().refresh();
-        log.log(Level.INFO, "imported emitter {0} from {1}", new Object[] {Objects.requireNonNull(emitter).getName(), file});
-      });
+      this.gameFile.getEmitters().add(emitter);
+      UI.getAssetController().refresh();
+      log.log(Level.INFO, "imported emitter {0} from {1}", new Object[] {Objects.requireNonNull(emitter).getName(), file});
+    });
   }
 
   public void importBlueprints() {
-    XmlImportDialog.importXml(
-      "Blueprint",
-      file -> {
-        Blueprint blueprint;
-        try {
-          blueprint = XmlUtilities.read(Blueprint.class, file.toUri().toURL());
-        } catch (IOException | JAXBException e) {
-          log.log(Level.SEVERE, String.format("could not load blueprint from %s", file), e);
-          return;
-        }
-        if (blueprint == null) {
-          return;
-        }
+    XmlImportDialog.importXml("Blueprint", file -> {
+      Blueprint blueprint;
+      try {
+        blueprint = XmlUtilities.read(Blueprint.class, file.toUri().toURL());
+      } catch (IOException | JAXBException e) {
+        log.log(Level.SEVERE, String.format("could not load blueprint from %s", file), e);
+        return;
+      }
+      if (blueprint == null) {
+        return;
+      }
 
-        if (blueprint.getName() == null || blueprint.getName().isEmpty()) {
-          blueprint.setName(FileUtilities.getFileName(file.getFileName().toString()));
-        }
+      if (blueprint.getName() == null || blueprint.getName().isEmpty()) {
+        blueprint.setName(FileUtilities.getFileName(file.getFileName().toString()));
+      }
 
-        if (this.gameFile.getBluePrints().stream()
-          .anyMatch(x -> x.getName().equals(blueprint.getName()))
-          && !ConfirmDialog.show(
-          Resources.strings().get("import_blueprint_title"),
-          Resources.strings().get("import_blueprint_question", blueprint.getName()))) {
-          return;
-        }
+      if (this.gameFile.getBluePrints().stream().anyMatch(x -> x.getName().equals(blueprint.getName())) && !ConfirmDialog.show(
+        Resources.strings().get("import_blueprint_title"), Resources.strings().get("import_blueprint_question", blueprint.getName()))) {
+        return;
+      }
 
-        this.gameFile.getBluePrints().add(blueprint);
-        Resources.blueprints().add(blueprint.getName(), blueprint);
-        UI.getAssetController().refresh();
+      this.gameFile.getBluePrints().add(blueprint);
+      Resources.blueprints().add(blueprint.getName(), blueprint);
+      UI.getAssetController().refresh();
 
-        log.log(Level.INFO, "imported blueprint {0} from {1}", new Object[] {blueprint.getName(), file});
-      },
-      Blueprint.BLUEPRINT_FILE_EXTENSION,
-      Blueprint.TEMPLATE_FILE_EXTENSION);
+      log.log(Level.INFO, "imported blueprint {0} from {1}", new Object[] {blueprint.getName(), file});
+    }, Blueprint.BLUEPRINT_FILE_EXTENSION, Blueprint.TEMPLATE_FILE_EXTENSION);
   }
 
   public void importTilesets() {
-    XmlImportDialog.importXml(
-      "Tilesets",
-      file -> {
-        Tileset tileset;
-        try {
-          URL path = file.toUri().toURL();
-          tileset = XmlUtilities.read(Tileset.class, path);
-          Objects.requireNonNull(tileset).finish(path);
-        } catch (IOException | JAXBException e) {
-          log.log(Level.SEVERE, String.format("could not load tileset from %s", file), e);
-          return;
-        }
+    XmlImportDialog.importXml("Tilesets", file -> {
+      Tileset tileset;
+      try {
+        URL path = file.toUri().toURL();
+        tileset = XmlUtilities.read(Tileset.class, path);
+        Objects.requireNonNull(tileset).finish(path);
+      } catch (IOException | JAXBException e) {
+        log.log(Level.SEVERE, String.format("could not load tileset from %s", file), e);
+        return;
+      }
 
-        if (this.gameFile.getTilesets().stream()
-          .anyMatch(x -> x.getName().equals(tileset.getName()))
-          && !ConfirmDialog.show(
-          Resources.strings().get("import_tileset_title"),
-          Resources.strings().get("import_tileset_title", tileset.getName()))) {
-          return;
-        }
+      if (this.gameFile.getTilesets().stream().anyMatch(x -> x.getName().equals(tileset.getName())) && !ConfirmDialog.show(
+        Resources.strings().get("import_tileset_title"), Resources.strings().get("import_tileset_title", tileset.getName()))) {
+        return;
+      }
 
-        loadTileset(tileset, false);
-        log.log(Level.INFO, "imported tileset {0} from {1}", new Object[] {tileset.getName(), file});
-      },
-      Tileset.FILE_EXTENSION);
+      loadTileset(tileset, false);
+      log.log(Level.INFO, "imported tileset {0} from {1}", new Object[] {tileset.getName(), file});
+    }, Tileset.FILE_EXTENSION);
   }
 
   public boolean isLoading() {
@@ -652,16 +553,14 @@ public class Editor extends Screen {
   }
 
   public void loadSpriteSheets(Collection<SpritesheetResource> infos, boolean forceAssetTreeUpdate) {
-    infos.parallelStream()
-      .forEach(
-        info -> {
-          Spritesheet opt = Resources.spritesheets().get(info.getName());
-          if (opt != null) {
-            Resources.spritesheets().update(info);
-          } else {
-            Resources.spritesheets().load(info);
-          }
-        });
+    infos.parallelStream().forEach(info -> {
+      Spritesheet opt = Resources.spritesheets().get(info.getName());
+      if (opt != null) {
+        Resources.spritesheets().update(info);
+      } else {
+        Resources.spritesheets().load(info);
+      }
+    });
 
     if (this.loading) {
       return;
@@ -704,24 +603,18 @@ public class Editor extends Screen {
     }
 
     if (this.currentResourceFile == null || selectFile) {
-      JFileChooser chooser;
-      try {
-        final String source = this.getProjectPath();
-        chooser = new JFileChooser(source != null ? source : new File(".").getCanonicalPath());
-        chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
-        chooser.setDialogType(JFileChooser.SAVE_DIALOG);
-        FileFilter filter =
-          new FileNameExtensionFilter(GAME_FILE_NAME, ResourceBundle.FILE_EXTENSION);
-        chooser.setFileFilter(filter);
-        chooser.addChoosableFileFilter(filter);
-        chooser.setSelectedFile(new File(DEFAULT_GAME_NAME + "." + ResourceBundle.FILE_EXTENSION));
+      final Path source = getProjectPath();
+      JFileChooser chooser = new JFileChooser(source.toFile());
+      chooser.setFileSelectionMode(JFileChooser.FILES_ONLY);
+      chooser.setDialogType(JFileChooser.SAVE_DIALOG);
+      FileFilter filter = new FileNameExtensionFilter(GAME_FILE_NAME, ResourceBundle.FILE_EXTENSION);
+      chooser.setFileFilter(filter);
+      chooser.addChoosableFileFilter(filter);
+      chooser.setSelectedFile(new File(DEFAULT_GAME_NAME + "." + ResourceBundle.FILE_EXTENSION));
 
-        int result = chooser.showSaveDialog(Game.window().getHostControl());
-        if (result == JFileChooser.APPROVE_OPTION) {
-          this.saveGameFile(chooser.getSelectedFile().toString());
-        }
-      } catch (IOException e1) {
-        log.log(Level.SEVERE, e1.getLocalizedMessage(), e1);
+      int result = chooser.showSaveDialog(Game.window().getHostControl());
+      if (result == JFileChooser.APPROVE_OPTION) {
+        this.saveGameFile(chooser.getSelectedFile().toPath());
       }
     } else {
       this.saveGameFile(this.currentResourceFile);
@@ -729,7 +622,7 @@ public class Editor extends Screen {
   }
 
   public void revert() {
-    if (this.currentResourceFile == null || this.currentResourceFile.isEmpty()) {
+    if (this.currentResourceFile == null) {
       return;
     }
 
@@ -738,24 +631,23 @@ public class Editor extends Screen {
       return;
     }
 
-    Path currentFile = Path.of(this.currentResourceFile);
     TmxMap currentMapSelection = null;
     if (UI.getMapController().getCurrentMap() != null) {
       currentMapSelection = UI.getMapController().getCurrentMap();
     }
 
     this.close(true);
-    this.load(currentFile, true);
+    this.load(currentResourceFile, true);
     UI.getMapController().setSelection(currentMapSelection);
     log.log(Level.INFO, "Reverted all pending changes.");
   }
 
   public MapComponent getMapComponent() {
-    return this.mapComponent;
+    return mapComponent;
   }
 
-  public String getCurrentResourceFile() {
-    return this.currentResourceFile;
+  public Path getCurrentResourceFile() {
+    return currentResourceFile;
   }
 
   public String getCurrentStatus() {
@@ -763,10 +655,7 @@ public class Editor extends Screen {
   }
 
   public List<TmxMap> getChangedMaps() {
-    return this.getMapComponent().getMaps().stream()
-      .filter(UndoManager::hasChanges)
-      .distinct()
-      .toList();
+    return this.getMapComponent().getMaps().stream().filter(UndoManager::hasChanges).distinct().toList();
   }
 
   public void setCurrentStatus(String currentStatus) {
@@ -787,24 +676,15 @@ public class Editor extends Screen {
     return this.getCurrentResourceFile() == null && this.getProjectPath() != null;
   }
 
-  private String saveGameFile(String target) {
-    String saveFile = this.getGameFile().save(target, preferences().compressFile());
-    this.currentResourceFile = saveFile;
-    preferences().setLastGameFile(this.currentResourceFile);
-    preferences().addOpenedFile(this.currentResourceFile);
+  private String saveGameFile(Path target) {
+    String saveFile = this.getGameFile().save(target.toString(), preferences().compressFile());
+    this.currentResourceFile = target;
+    preferences().setLastGameFile(target);
+    preferences().addOpenedFile(target);
     this.gamefileLoaded();
-    log.log(
-      Level.INFO,
-      "saved {0} maps, {1} spritesheets, {2} tilesets, {3} emitters, {4} blueprints, {5} sounds to {6}",
-      new Object[] {
-        this.getGameFile().getMaps().size(),
-        this.getGameFile().getSpriteSheets().size(),
-        this.getGameFile().getTilesets().size(),
-        this.getGameFile().getEmitters().size(),
-        this.getGameFile().getBluePrints().size(),
-        this.getGameFile().getSounds().size(),
-        this.currentResourceFile
-      });
+    log.log(Level.INFO, "saved {0} maps, {1} spritesheets, {2} tilesets, {3} emitters, {4} blueprints, {5} sounds to {6}",
+      new Object[] {getGameFile().getMaps().size(), getGameFile().getSpriteSheets().size(), getGameFile().getTilesets().size(),
+        getGameFile().getEmitters().size(), getGameFile().getBluePrints().size(), getGameFile().getSounds().size(), getCurrentResourceFile()});
     this.setCurrentStatus(Resources.strings().get("status_gamefile_saved"));
 
     this.saveMaps();
@@ -812,19 +692,22 @@ public class Editor extends Screen {
   }
 
   private void saveMaps() {
-    for (TmxMap map : this.getChangedMaps()) {
-      UndoManager.save(map);
-
+    System.out.println("wtf.");
+    getChangedMaps().forEach(m -> {
+      UndoManager.save(m);
+      String fileName = String.format("%s.%s", m.getName(), TmxMap.FILE_EXTENSION);
       if (preferences().syncMaps()) {
-        for (String file : FileUtilities.findFilesByExtension(
-          new ArrayList<>(),
-          Path.of(Resources.getLocation("maps").getPath()),
-          map.getName() + "." + TmxMap.FILE_EXTENSION)) {
-          Path newFile = XmlUtilities.save(map, file, TmxMap.FILE_EXTENSION);
-          log.log(Level.INFO, "synchronized map {0}", new Object[] {newFile});
+        Path searchRoot = getProjectPath().getParent();
+        try (Stream<Path> paths = Files.walk(searchRoot)) {
+          paths.filter(p -> Files.isRegularFile(p) && p.getFileName().toString().equals(fileName)).forEach(p -> {
+            Path newFile = XmlUtilities.save(m, p);
+            log.log(Level.INFO, "synchronized map {0}", new Object[] {newFile});
+          });
+        } catch (IOException e) {
+          log.log(Level.SEVERE, "Error walking file tree for map sync", e);
         }
       }
-    }
+    });
   }
 
   private static void loadCustomEmitters(List<EmitterData> emitters) {
@@ -859,23 +742,19 @@ public class Editor extends Screen {
     for (IImageLayer imageLayer : map.getImageLayers()) {
       File imageFile = new File(imageLayer.getImage().getAbsoluteSourcePath().toString());
       if (!imageFile.exists()) {
-        log.warning(() -> String.format("Source image for image layer '%s' in map '%s' could not be loaded: '%s'",
-          map.getName(),
-          imageLayer.getName(),
-          imageLayer.getImage().getAbsoluteSourcePath().toString()));
+        log.warning(
+          () -> String.format("Source image for image layer '%s' in map '%s' could not be loaded: '%s'", map.getName(), imageLayer.getName(),
+            imageLayer.getImage().getAbsoluteSourcePath().toString()));
         continue;
       }
       Spritesheet opt = Resources.spritesheets().get(imageLayer.getImage().getSource());
       Spritesheet sprite;
       if (opt == null) {
-        BufferedImage img =
-          Resources.images().get(imageLayer.getImage().getAbsoluteSourcePath(), true);
+        BufferedImage img = Resources.images().get(imageLayer.getImage().getAbsoluteSourcePath(), true);
         if (img == null) {
           continue;
         }
-        sprite =
-          Resources.spritesheets()
-            .load(img, imageLayer.getImage().getSource(), img.getWidth(), img.getHeight());
+        sprite = Resources.spritesheets().load(img, imageLayer.getImage().getSource(), img.getWidth(), img.getHeight());
       } else {
         sprite = opt;
       }
@@ -889,8 +768,7 @@ public class Editor extends Screen {
 
     this.loadSpriteSheets(infos, false);
     for (SpritesheetResource info : infos) {
-      if (this.getGameFile().getSpriteSheets().stream()
-        .noneMatch(x -> x.getName().equals(info.getName()))) {
+      if (this.getGameFile().getSpriteSheets().stream().noneMatch(x -> x.getName().equals(info.getName()))) {
         this.getGameFile().getSpriteSheets().add(info);
       }
     }
